# askfia

./: .env.example  .gitignore  AUTH_IMPLEMENTATION_GUIDE.md  CLAUDE.md  COST_TRACKING.md  Makefile  README.md  STORAGE_STRATEGY.md  docker-compose.yml  netlify.toml  pyfia-agent-architecture-v2.md  render.yaml
.claude/: settings.local.json
.github/workflows/: build-fia-cache.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/output/: species_richness.tif
backend/scripts/: upload_to_motherduck.py
backend/src/askfia_api/: auth.py  config.py  main.py  security.py
backend/src/askfia_api/api/: exceptions.py
backend/src/askfia_api/api/routes/: auth.py  chat.py  health.py  query.py
backend/src/askfia_api/models/: base.py  schemas.py
backend/src/askfia_api/services/: agent.py  container.py  email_storage.py  fia_service.py  gridfia_service.py  gridfia_tools.py  multi_state_executor.py  rate_limiter.py  species_data.py  statistics.py  user_service.py
backend/src/pyfia_api/: __init__.py  auth.py  config.py  main.py
backend/src/pyfia_api/api/routes/: auth.py  chat.py  downloads.py  health.py  query.py  usage.py
backend/src/pyfia_api/services/: agent.py  fia_service.py  forest_types.py  motherduck_fia.py  species_data.py  storage.py
backend/tests/: test_county_query.py  test_gridfia_tools.py  test_multi_state_executor.py  test_statistics.py
frontend/: .build-id  .env.example  Dockerfile  netlify.toml  package-lock.json  package.json  tailwind.config.js
frontend/.netlify/: state.json
frontend/app/: globals.css  layout.tsx  (+1 more)
(+23 files in other folders)
